검색 기능 구현

--- a/index.html
+++ b/index.html
@@ -23,8 +23,17 @@
             <!-- 시간 -->
           </div>
         </div>
+        <div>
+          <input
+            class="input"
+            id="input"
+            placeholder="검색어를 입력하세요"
+            autocomplete="off"
+          />
+        </div>
       </div>
     </div>
     <script src="./js/clock.js"></script>
+    <script src="./js/search.js"></script>
   </body>
 </html>
