검색 스타일 구현

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!-- 시간 -->
           </div>
         </div>
-        <div>
+        <div class="search">
           <input
             class="input"
             id="input"
