명언 데이터 가져오기 구현

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
           />
         </div>
       </div>
+      <div class="quote" id="quote">
+        <!-- 명언 -->
+      </div>
     </div>
     <script src="./js/clock.js"></script>
     <script src="./js/search.js"></script>
+    <script src="./js/quote.js"></script>
   </body>
 </html>
