북마크 토글 스타일 구현

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
         <!-- 명언 -->
       </div>
     </div>
+    <div class="bookmark_open" id="bookmark_open">
+      <div class="bookmark_open_btn" id="bookmark_open_btn">북마크 닫기</div>
+    </div>
+    <div class="bookmark_close" id="bookmark_close">
+      <div class="bookmark_close_btn" id="bookmark_close_btn">북마크 열기</div>
+    </div>
+    <div class="bookmark_bar"><!-- 북마크 바 --></div>
+
     <script src="./js/clock.js"></script>
     <script src="./js/search.js"></script>
     <script src="./js/quote.js"></script>
