북마크 토글 기능 구현

--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
     <div class="bookmark_close" id="bookmark_close">
       <div class="bookmark_close_btn" id="bookmark_close_btn">북마크 열기</div>
     </div>
-    <div class="bookmark_bar"><!-- 북마크 바 --></div>
+    <div class="bookmark_bar" id="bookmark_bar"><!-- 북마크 바 --></div>
 
     <script src="./js/clock.js"></script>
     <script src="./js/search.js"></script>
     <script src="./js/quote.js"></script>
+    <script src="/js/bookmarkToggle.js"></script>
   </body>
 </html>
