--- a/index.html
+++ b/index.html
@@ -42,11 +42,29 @@
     <div class="bookmark_close" id="bookmark_close">
       <div class="bookmark_close_btn" id="bookmark_close_btn">북마크 열기</div>
     </div>
-    <div class="bookmark_bar" id="bookmark_bar"><!-- 북마크 바 --></div>
+    <div class="bookmark_bar" id="bookmark_bar">
+      <!-- 북마크 바 -->
+      <div class="bookmark_add_btn" id="bookmark_add_btn">+ 북마크 추가</div>
+      <div class="bookmark_input_form" id="bookmark_input_form">
+        <div class="bookmark_input_name">
+          <div class="lable">이름</div>
+          <input class="name_input" id="name_input" />
+        </div>
+        <div class="bookmark_input_url">
+          <div class="lable">주소</div>
+          <input class="url_input" id="url_input" />
+        </div>
+        <div class="bookmark_input_btn">
+          <div class="cancel_btn" id="cancel_btn">취소</div>
+          <div class="add_btn" id="add_btn">추가</div>
+        </div>
+      </div>
+    </div>
 
     <script src="./js/clock.js"></script>
     <script src="./js/search.js"></script>
     <script src="./js/quote.js"></script>
     <script src="/js/bookmarkToggle.js"></script>
+    <script src="./js/bookmark.js"></script>
   </body>
 </html>
