추가버튼 누르면 로컬 스토리지에 추가하는 기능 완료

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       <div class="bookmark_input_form" id="bookmark_input_form">
         <div class="bookmark_input_name">
           <div class="lable">이름</div>
-          <input class="name_input" id="name_input" />
+          <input class="name_input" id="name_input" autocomplete="off" />
         </div>
         <div class="bookmark_input_url">
           <div class="lable">주소</div>
-          <input class="url_input" id="url_input" />
+          <input class="url_input" id="url_input" autocomplete="off" />
         </div>
         <div class="bookmark_input_btn">
           <div class="cancel_btn" id="cancel_btn">취소</div>
