북마크 데이터 로컬스토리지에 저장된 값들을 가져와서 렌더링 구현,북마크 추가시 실시간 추가 구현

--- a/index.html
+++ b/index.html
@@ -59,22 +59,7 @@
           <div class="add_btn" id="add_btn">추가</div>
         </div>
       </div>
-      <div class="bookmark_list" id="bookmark_list">
-        <div class="bookmark_item">
-          <a>
-            <img src="/" />
-            <div class="bookmark_name">네이버</div>
-          </a>
-          <div class="delete_btn">삭제</div>
-        </div>
-        <div class="bookmark_item">
-          <a>
-            <img src="/" />
-            <div class="bookmark_name">구글</div>
-          </a>
-          <div class="delete_btn">삭제</div>
-        </div>
-      </div>
+      <div class="bookmark_list" id="bookmark_list"></div>
     </div>
 
     <script src="./js/clock.js"></script>
